# akasha

./: .envrc  .gitignore  .hgignore  .pdm-python  .python-version  MANIFEST.in  README.md  pylintrc  pyproject.toml  pytest.ini  runtests.py  segfault.py  setup.py  shell.nix  tox.ini
akasha/: __init__.py  akasha.py  lab.py  timing.py  tunings.py  units.py
akasha/analysis/: __init__.py  fft.py
akasha/app/: __init__.py  unity.py
akasha/audio/: __init__.py  accumulator.py  channels.py  clothoids.py  curves.py  delay.py  dtmf.py  envelope.py  frequency.py  generators.py  harmonics.py  mix.py  noise.py  oscillator.py  overtones.py  padsynth.py  playable_mixin.py  resample.py  scalar.py  sound.py  sum.py  time.py
akasha/control/: __init__.py  arrows.py  macros.py  monads.py
akasha/curves/: __init__.py  circle.py  curve.py  ellipse.py  ellipse_fit.py  kepler_orbit.py  square.py  super.py
akasha/dsp/: __init__.py  chirp_zeta.py  fft.py  functions.py  smoothing_plugin.py  tcif.py  window.py  z_transform.py
akasha/effects/: __init__.py  filters.py  tape.py
akasha/funct/: __init__.py  fastosc.py  itertools.py  osc_func.py  oscillator.py  timing.py
akasha/graphic/: __init__.py  animation.py  colour.py  drawing.py  geometry.py  output.py  pixel.py  plotting.py  widgets.py
akasha/graphics/: __init__.py  animation.py  colour.py  drawing.py  splines.py
akasha/gui/: __init__.py  animation.py  pygame_adapter.py  pysdl2_adapter.py  widgets.py
akasha/io/: __init__.py  audio.py  keyboard.py  path.py  sfaudio.py  waveaudio.py  wavefile.py
akasha/math/: __init__.py  functions.py
akasha/misc/: borg.py  curses_input.py  descriptor_example.py  mandelbrot.py  osc_traits.py  osc_units.py  (+2 more)
docs/: todo.txt
functional/: noise.py  timing.py
install/: INSTALL-linux.md  INSTALL.md  Install-on-FreeBSD.md  Installing Numpy etc with homebrew.txt  Installing Python, virtualenv, NumPy, SciPy, matplotlib and IPython on Lion.webloc  base.pip  deps-system.pip  deps-venv.pip  dev-requires.pip  dot.bash_profile  extra-requires.pip  macports.sh  pip-freeze-2.7-stackless.txt  pip-freeze-system.txt  pip-freeze-virtualenv.txt  pip-py2.7-requirements.txt  pip-py32-requirements.txt  pip-stable-req-old.txt  pip-stable.req  python2.pip  requires.pip  test-requires.pip
pylib/: __init__.py  __main__.py  accumulator.py  akasha.py  classes.py  curses_input.py  descriptor_example.py  dtmf.py  envelope.py  envelopetest.py  generators.py  harmonics.py  noise.py  osc_traits.py  osc_units.py  oscillator.py  oscillatortest.py  recipes.py  sound.py  timing.py  tunings.py  units.py
(+186 files in other folders)
